--- a/config/dev/ai-auth.yml
+++ b/config/dev/ai-auth.yml
@@ -1,16 +1,29 @@
-logging:
-  level:
-    com.lvhaifeng.cloud.admin: DEBUG
+server:
+  port: 9777 #启动端口
+
 spring:
   application:
-    name: cloud-admin
+    name: cloud-auth
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
     default-property-inclusion: non_null
+  # redis 配置
+  redis:
+    database: 0
+    host: 192.168.0.250
+    lettuce:
+      pool:
+        max-active: 8   # 最大连接数据库连接数,设 0 为没有限制
+        max-idle: 8     # 最大等待连接中的数量,设 0 为没有限制
+        max-wait: -1ms  # 最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
+        min-idle: 0     # 最小等待连接中的数量,设 0 为没有限制
+      shutdown-timeout: 100ms
+    password: 123456
+    port: 6380
   datasource:
     name: cloud
-    url: jdbc:mysql://192.168.0.117:3306/spring_cloud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://192.168.0.250:3308/ylz_ai?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
     username: root
     password: 123456
     # 使用druid数据源
@@ -29,21 +42,8 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
-  # redis 配置
-  redis:
-    database: 0
-    host: 192.168.0.117
-    lettuce:
-      pool:
-        max-active: 8   # 最大连接数据库连接数,设 0 为没有限制
-        max-idle: 8     # 最大等待连接中的数量,设 0 为没有限制
-        max-wait: -1ms  # 最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
-        min-idle: 0     # 最小等待连接中的数量,设 0 为没有限制
-      shutdown-timeout: 100ms
-    password: 123456
-    port: 6379
   rabbitmq:
-    host: 192.168.0.117
+    host: 192.168.0.250
     port: 5672
     virtual-host: /spring-cloud
     username: admin
@@ -54,10 +54,6 @@ spring:
     sampler:
       percentage: 1
 
-server:
-  port: 8762
-
-# 必须配置
 feign:
   httpclient:
     enabled: false
@@ -75,15 +71,26 @@ mybatis-plus:
       id-type: 4
       # 默认数据库表下划线命名
       table-underline: true
-  configuration:
+#  configuration:
     # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+swagger:
+  # 配置请求路由
+  zuul:
+    host: 127.0.0.1:8765
+    prefix: /api/auth
+  production: false
+  basic:
+    enable: false
+    username: admin
+    password: admin
 
 #ribbon:
 #  eureka:
 #    enabled: true
-#  ReadTimeout: 120000
-#  ConnectTimeout: 120000
+#  ReadTimeout: 60000
+#  ConnectTimeout: 60000
 #  MaxAutoRetries: 0
 #  MaxAutoRetriesNextServer: 0
 #  OkToRetryOnAllOperations: false
@@ -100,27 +107,28 @@ hystrix:
       execution:
         isolation:
           thread:
-            timeoutInMilliseconds: 110000
+            timeoutInMilliseconds: 15000
 
-auth:
-  serviceId: cloud-auth
-  user:
-    token-header: Authorization
-  client:
-    id: cloud-admin
-    secret: 123456
-    token-header: client-token
+user:
+  expire: 3600
+  rsa-secret: xx1WET12^%3^(WE45
+
+client:
+  id: cloud-auth
+  secret: 123456
+  token-header: client-token
+  expire: 3600
+  rsa-secret: x2318^^(*WRYQWR(QW&T
+
+# redis-cache 相关
+redis:
+  aec-key: xx288&^^%$!@#4dc
+  aec-iv: 0123456789abcdef
 
 request:
-  skip: /druid/**,/swagger-ui.html,/doc.html,/v2/**,/webjars/**,/swagger**/**,/,/csrf,/error
+  skip: /token,/druid/**,/swagger-ui.html,/doc.html,/v2/**,/webjars/**,/swagger**/**,/,/csrf,/error,/authClient/**
 
-swagger:
-  # 配置请求路由
-  zuul:
-    host: 127.0.0.1:8765
-    prefix: /api/admin
-  production: false
-  basic:
-    enable: false
-    username: admin
-    password: admin
+logging:
+  level:
+    root: info
+    org.springframework.integration.endpoint.SourcePollingChannelAdapter: info
