--- a/config/dev/ai-admin.yml
+++ b/config/dev/ai-admin.yml
@@ -1,6 +1,6 @@
 logging:
   level:
-    com.lvhaifeng.cloud.admin: DEBUG
+    com.ylz.ai.admin: DEBUG
 spring:
   application:
     name: ai-admin
@@ -9,7 +9,7 @@ spring:
     time-zone: GMT+8
     default-property-inclusion: non_null
   datasource:
-    name: cloud
+    name: ylz_ai
     url: jdbc:mysql://192.168.0.250:3308/ylz_ai?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
     username: root
     password: 123456
@@ -45,7 +45,7 @@ spring:
   rabbitmq:
     host: 192.168.0.250
     port: 5672
-    virtual-host: /spring-cloud
+    virtual-host: /ylz-ai
     username: admin
     password: admin
   zipkin:
@@ -103,11 +103,11 @@ hystrix:
             timeoutInMilliseconds: 110000
 
 auth:
-  serviceId: cloud-auth
+  serviceId: ai-auth
   user:
     token-header: Authorization
   client:
-    id: cloud-admin
+    id: ai-admin
     secret: 123456
     token-header: client-token
 
