--- a/config/dev/ai-admin.yml
+++ b/config/dev/ai-admin.yml
@@ -79,15 +79,15 @@ mybatis-plus:
     # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
-#ribbon:
-#  eureka:
-#    enabled: true
-#  ReadTimeout: 120000
-#  ConnectTimeout: 120000
-#  MaxAutoRetries: 0
-#  MaxAutoRetriesNextServer: 0
-#  OkToRetryOnAllOperations: false
-#  NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+ribbon:
+  eureka:
+    enabled: true
+  ReadTimeout: 120000
+  ConnectTimeout: 120000
+  MaxAutoRetries: 0
+  MaxAutoRetriesNextServer: 0
+  OkToRetryOnAllOperations: false
+  NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
 
 hystrix:
   threadpool:
