--- a/config/prod/ai-auth.yml
+++ b/config/prod/ai-auth.yml
@@ -11,7 +11,7 @@ spring:
   # redis 配置
   redis:
     database: 0
-    host: 192.168.0.250
+    host: localhost
     lettuce:
       pool:
         max-active: 8   # 最大连接数据库连接数,设 0 为没有限制
@@ -20,10 +20,10 @@ spring:
         min-idle: 0     # 最小等待连接中的数量,设 0 为没有限制
       shutdown-timeout: 100ms
     password: 123456
-    port: 6380
+    port: 6379
   datasource:
     name: ylz_ai
-    url: jdbc:mysql://192.168.0.250:3308/ylz_ai?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/ylz_ai?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
     username: root
     password: 123456
     # 使用druid数据源
@@ -43,7 +43,7 @@ spring:
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
   rabbitmq:
-    host: 192.168.0.250
+    host: localhost
     port: 5672
     virtual-host: /ylz-ai
     username: admin
@@ -78,7 +78,7 @@ mybatis-plus:
 swagger:
   # 配置请求路由
   zuul:
-    host: 127.0.0.1:8765
+    host: localhost:8765
     prefix: /api/auth
   production: false
   basic:
