--- a/config/prod/ai-gate.yml
+++ b/config/prod/ai-gate.yml
@@ -11,7 +11,7 @@ spring:
   # redis 配置
   redis:
     database: 0
-    host: 192.168.0.250
+    host: localhost
     lettuce:
       pool:
         max-active: 8   # 最大连接数据库连接数,设 0 为没有限制
@@ -20,9 +20,9 @@ spring:
         min-idle: 0     # 最小等待连接中的数量,设 0 为没有限制
       shutdown-timeout: 100ms
     password: 123456
-    port: 6380
+    port: 6379
   rabbitmq:
-    host: 192.168.0.250
+    host: localhost
     port: 5672
     virtual-host: /ylz-ai
     username: admin
