--- a/config/dev/ai-mobile.yml
+++ b/config/dev/ai-mobile.yml
@@ -135,8 +135,8 @@ swagger:
     password: admin
 
 weixin:
-  appid:
-  secret:
+  appid: wx578b4454700f0a35
+  secret: a9d765b57060b8e276a64567205325bd
   grant_type: authorization_code
 
 upload:
